--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,8 @@ dependencies {
     compile 'tv.danmaku.ijk.media:ijkplayer-java:0.7.9'
     compile 'tv.danmaku.ijk.media:ijkplayer-armv7a:0.7.9'
     compile files('libs/EricUtils-Trace.jar')
+
+    compile 'com.wenwenwen888:searchbox:1.0.0'
+
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
 }
